--- a/wp/wp-content/themes/leprojo-2013/.jshintrc
+++ b/wp/wp-content/themes/leprojo-2013/.jshintrc
@@ -4,7 +4,7 @@
 	"node": true,
 	"browser": true,
 	"bitwise": true,
-	"camelcase": true,
+	"camelcase": false,
 	"curly": true,
 	"eqeqeq": true,
 	"immed": true,
